--- a/src/components/About-us/about.css
+++ b/src/components/About-us/about.css
@@ -16,8 +16,22 @@
 
 .about__img img {
   border-radius: 15px;
+  /* margin-top: 3em; */
 }
 
 .about__content h2 {
   font-weight: 600;
+}
+
+@media only screen and (max-width: 1300px) {
+  .about__img img {
+    border-radius: 15px;
+    margin-top: 3em;
+  }
+}
+@media only screen and (max-width: 1150px) {
+  .about__img img {
+    border-radius: 15px;
+    margin-top: 10em;
+  }
 }
