--- a/src/components/Hero-Section/hero-section.css
+++ b/src/components/Hero-Section/hero-section.css
@@ -6,18 +6,21 @@
 .hero__content {
   padding-top: 80px;
 }
+
 .search input {
   border: none;
   outline: none;
-  padding: 7px 10%;
+  padding: 7px 13px;
 }
 
 .search {
-  width: 60%;
+  width: 40%;
   border: 1px solid #17bf9d44;
   display: flex;
   justify-content: space-between;
   align-items: center;
   border-radius: 50px;
-  margin-top: 20px;
+  margin-left: 0px;
+  height: 3em;
 }
+
